--- a/Views/Home/Forum.cshtml
+++ b/Views/Home/Forum.cshtml
@@ -52,7 +52,7 @@
     {
         <div style=" width: 100%; " class="row text-left border border-dark mb-4">
             <div class="col-1" style="padding-top: 1%; padding-left:1%;">
-                <img src="~/img/user-profile.png" alt="" style="border-radius: 100px; border:1px solid black; width:58px; height:58px">
+                <img src='@Url.Action("getImgByIdAsync", "Home", new { id = x.Creator.Id }) ' alt="" style="border-radius: 100px; border:1px solid black; width:58px; height:58px">
 
             </div>
 
