--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div style="text-align:center; width: 70%; position:absolute; height: 85%; margin-bottom: 0%; background: #f2f2f2;">
-    <h1 class="display-4">Welcome</h1>
+<div style="height:calc(100vh - 119px); background: #f2f2f2; z-index:-1;" class="mx-auto">
+    <div style="text-align:center; margin-bottom: 0%; background: #f2f2f2;">
+        <h1 class="display-4">Welcome</h1>
 
-    <p>Check your mental condition <a href="https://docs.microsoft.com/aspnet/core">here</a>.</p>
+        <p>Check your mental condition <a href="https://docs.microsoft.com/aspnet/core">here</a>.</p>
+        
+    </div>
 </div>
