--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -2,8 +2,11 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
-<div style="text-align:center; width: 70%; position:absolute; height: 84%; margin-bottom: 0%; background: #f2f2f2;">
+<div style="height:calc(100vh - 119px); background: #f2f2f2; z-index:-1;" class="mx-auto">
+    <div style="text-align:center; margin-bottom: 0%; background: #f2f2f2;">
 
-    <h1>@ViewData["Title"]</h1>
-    <p>Use this page to detail your site's privacy policy.</p>
+        <h1>@ViewData["Title"]</h1>
+        <p>Use this page to detail your site's privacy policy.</p>
+
+    </div>
 </div>
