--- a/Views/Home/Forum.cshtml
+++ b/Views/Home/Forum.cshtml
@@ -7,8 +7,10 @@
 @if (User.Identity.IsAuthenticated)
 {
     <form method="get" action="CreateTopic">
-        <button type="submit" style="left:88%; margin-top:11px; width:120px; 
-            z-index:1;" class="position-absolute btn btn-primary text-center">Create post</button>
+        <button type="submit" style="left:88%; margin-top:11px; width:120px;
+            z-index:1;" class="position-absolute btn btn-primary text-center">
+            Create post
+        </button>
     </form>
 }
 
