--- a/Views/Home/CreateTest.cshtml
+++ b/Views/Home/CreateTest.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div style="width:90%; height:calc(100vh - 119px); background: #f2f2f2; z-index:-1;" class="mx-auto">
-    <form method="post" action="" style="margin-top:0px" class="">
-        <div class="row-2 ml-5 mr-5 pt-3">
+    <form method="post" asp-action="CreateTestAsync" asp-controller="Home" style="margin-top:0px" class="">
+        <div class="row-3 ml-5 mr-5 pt-3">
             <div class="row col-12">
                 <label asp-for="Theme" class="">Test Theme </label>
                 <span asp-validation-for="Theme" class="text-danger"></span>
@@ -18,7 +18,7 @@
                     <button type="submit" style="width:100%; z-index:1;" class="btn btn-primary ml-3">Publish</button>
                 </div>
             </div>
-            
+
         </div>
 
         <br />
@@ -29,6 +29,15 @@
             </div>
             <div class="row col-12">
                 <textarea asp-for="Description" style="width:100%; min-height:180px; max-height:455px"></textarea>
+            </div>
+        </div>
+        <div class="row-2 ml-5">
+            <div class="row col-12">
+                <label asp-for="TestUrl" class="">Url </label>
+                <span asp-validation-for="TestUrl" class="text-danger"></span>
+            </div>
+            <div class="row col-12">
+                <textarea asp-for="TestUrl" style="width:100%; min-height:180px; max-height:455px"></textarea>
             </div>
         </div>
     </form>
