--- a/Views/Home/Tests.cshtml
+++ b/Views/Home/Tests.cshtml
@@ -17,7 +17,7 @@
 
     <div style="background: #f2f2f2; z-index:-1;" class="mx-auto">
 
-        @for (int i = 0; i < 3; i++)
+        @foreach (var test in ViewBag.Tests)
         {
 
             <div style="width:90%; padding:2% ;" class="mx-auto">
@@ -27,20 +27,21 @@
 
                     <div class="col-10 text-justify mt-1">
 
-                        <h3 id="" onclick="">Тест на психическое состояние #@(i + 1)</h3>
+                        <h3 id="" onclick="">@test.Theme</h3>
 
 
-                        <p class="" style="white-space: normal;">Тест на психическое состояние. Не чувствуете ли вы какого либо душевного расстройства, которое начинает угнетать вашу нервную систему? Если вы стали довольно раздражительны или, наоборот, у вас постоянная апатия, то стоит задуматься над своим психическим состоянием. А поможет вам в этом данный тест. Выберите один из предложенных на каждый вопрос ответов.</p>
+                        <p class="" style="white-space: normal;">@test.Description</p>
 
 
                     </div>
                     <div class="col-2 text-center my-auto" style="">
-                        @*<img src='@Url.Action("getImgAsync", "Home") ' alt="" style="border-radius: 100px; border:1px solid black; width:130px; height:130px">*@
-                        <button type="button" class="btn  rounded-circle" style="background-color:#f2f2f2 ;width:130px; height:130px"><h1><i class="">45</i></h1></button>
+                        <form>
+
+                            <button type="submit" asp-action="TestView" asp-controller="Home" asp-route-id="@test.Id" class="btn btn-dark rounded-circle my-2" style="width:130px; height:130px"><h3><i>Start</i></h3></button>
+
+                        </form>
                     </div>
-
                 </div>
-
             </div>
         }
     </div>
