--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -54,7 +54,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-10">
-                        <input type="submit" value="Upload">
+                        <input type="submit" class="btn btn-primary" value="Upload">
                     </div>
                 </div>
             </form>
