--- a/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -10,9 +10,9 @@
         <div class="row">
 
             <div class="col-md-4">
-                <img src='@Url.Action("getImgAsync", "Home") ' alt="" class="col-md-2;" style="border:1px solid black;width:300px; height:310px">
+                <img src='@Url.Action("getImgAsync", "Home") ' alt="" class="col-md-2;" style="border:1px solid black;width:300px; height:300px">
             </div>
-            
+
             <div class="col-md-6 ml-5">
                 <div class="row ">
                     <h3>Nickname: @ViewData["UserName"]</h3>
@@ -39,10 +39,22 @@
                     <p><h3>Location: Ukraine, Kharkiv</h3></p>
                 </div>
                 <div class="row mb-n1">
-                    <p><h3>Status: patient</h3></p>
-                </div>
-                <div class="row mb-n1">
-                    <p><h3>Reputation: 32</h3></p>
+                    @if (User.IsInRole("admin"))
+                    {
+                        <p><h3>Status: admin</h3></p>
+                    }
+                    else if (User.IsInRole("specialist"))
+                    {
+                        <p><h3>Status: specialist</h3></p>
+                    }
+                    else
+                    {
+                        <p><h3>Status: user</h3></p>
+                        <form asp-action="Waiting" asp-controller="Home" method="post">
+                            <input type="hidden" name="role" value="specialist" />
+                            <button type="submit" class="btn btn-primary">Update status to specialist</button>
+                        </form>
+                    }
                 </div>
             </div>
             <form method="post" enctype="multipart/form-data" asp-controller="Home" asp-action="UploadFileAsync">
@@ -59,17 +71,24 @@
                 </div>
             </form>
         </div>
-
+        <h3>About</h3>
+        <div class="row-2">
+            <form>
+                <textarea name="About" style="min-height: 100px; max-height: 400px; width:100%">@ViewData["About"]</textarea>
+                <button asp-action="UpdateAbout" asp-controller="Home"
+                        asp-route-user="@User" type="submit" class="btn btn-success mr-1 my-2" style="width:100px;">
+                    Save
+                </button>   
+            </form>
+        </div>
         <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
         <p>
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
-            <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
-                <button class="btn btn-primary" type="submit">Download</button>
-            </form>
-        <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-primary">Delete</a>
-        </p>
+        <form id="download-data" asp-page="DownloadPersonalData" method="post" class="form-group">
+            <button class="btn btn-primary" type="submit">Download</button>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+        </form>
     </div>
 </div>
 
