--- a/Views/Home/Tests.cshtml
+++ b/Views/Home/Tests.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-@if (User.Identity.IsAuthenticated)
+@if (User.Identity.IsAuthenticated && (User.IsInRole("admin") || User.IsInRole("specialist")))
 {
     <form method="get" action="CreateTest">
 
