--- a/TWHelp/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/TWHelp/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -7,7 +7,21 @@
 
 <h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<div class="row d-flex flex-column">
+    <div class="col-md-6">
+        <form method="post" id="changePhotoForm" enctype="multipart/form-data">
+            @*<img src="@Url.Action("GetPhoto", "AccountAPI", new { userId = ViewData["userId"]})" , width="300" height="300" />*@
+            <img src="@Model.ConvertedPhoto" width="300" height="300" />
+
+            <h4>Profile picture</h4>
+            <div class="form-group">
+                <p>Upload one or more files using this form:</p>
+                <input id="inputFile" type="file" name="photo" multiple >
+            </div>
+
+            <button id="update-profile-button" type="submit" asp-page-handler="PhotoUpdate" class="btn btn-primary">Upload</button>
+        </form>
+    </div>
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
