Small fixes with Psychos profiles UI

--- a/TWHelp/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
+++ b/TWHelp/Areas/Identity/Pages/Account/Manage/_ViewImports.cshtml
@@ -1,2 +1,1 @@
-﻿@using Domain.Models.Identity
-@using TWHelp.Areas.Identity.Pages.Account.Manage
+﻿@using TWHelp.Areas.Identity.Pages.Account.Manage
