--- a/TWHelp/Areas/Identity/Pages/Account/_ViewImports.cshtml
+++ b/TWHelp/Areas/Identity/Pages/Account/_ViewImports.cshtml
@@ -1,3 +1,1 @@
-﻿@using Domain.Models.Identity
-@using Domain.Models.Domain
-@using TWHelp.Areas.Identity.Pages.Account
+﻿@using TWHelp.Areas.Identity.Pages.Account
