--- a/TWHelp/Views/_ViewImports.cshtml
+++ b/TWHelp/Views/_ViewImports.cshtml
@@ -1,1 +1,5 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Domain.Models.Identity
+@using Domain.Models.Domain
+@using TWHelp.Models
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
