--- a/TWHelp/Areas/_ViewImports.cshtml
+++ b/TWHelp/Areas/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Domain.Models.Identity
 @using Domain.Models.Domain
 @using TWHelp.Models
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
