--- a/TWHelp/Views/Shared/_Layout.cshtml
+++ b/TWHelp/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container">
-                <a class="navbar-brand" asp-area="Home" asp-page="Index">TWHelp</a>
+                <a class="navbar-brand" asp-area="Home" asp-page="/Index">TWHelp</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
