--- a/TWHelp/wwwroot/css/site.css
+++ b/TWHelp/wwwroot/css/site.css
@@ -57,5 +57,12 @@ body {
 
 
 
-/* animation on register page */
+/* psyco page */
+.red-placeholder::-webkit-input-placeholder {
+    color: red;
+}
+
+.gray-placeholder::-webkit-input-placeholder {
+    color: gray;
+}
 
